<resources>
    <string name="navigation_drawer_open">فتح درج الملاحة</string>
    <string name="navigation_drawer_close">اغلاق درج الملاحة</string>
    <string name="action_settings">خصائص</string>
    <string name="action_search">بحث</string>
    <string name="tab_inbox">علبة الواردات</string>
    <string name="tab_favorite">محفوظات</string>
    <string name="nav_cloud">حساب الكلاود</string>
    <string name="nav_storage">إدارة التخزين</string>
    <string name="nav_settings">إعدادات</string>
    <string name="nav_about">حول التطبيق</string>
    <string name="nav_rate">قيم التطبيق</string>
    <string name="nav_share">شارك التطبيق</string>
    <string name="nav_more_option_title">خيارات اخرى</string>
    <string name="delete">حذف</string>
    <string name="share">شارك</string>
    <string name="save">حفظ</string>
    <string name="upload">رفع</string>
    <string name="history">التاريخ</string>
    <string name="detail">التفاصيل</string>
    <string name="add_contact">اضف جهات اتصال</string>
    <string name="category_audio_name">صوت</string>
    <string name="out_put_file_type_description">حدد الإخراج مع نوع الملف الذي حفظت في التخزين</string>
    <string name="out_put_file_title">تنسيق الملف</string>
    <string name="audio_source">مصدر الصوت</string>
    <string name="category_notification_name">إشعارات</string>
    <string name="enable_notication_title">تفعيل الإشعارات</string>
    <string name="enable_notication_decription">إظهارإلاشعارات على شريط الحالة عند التسجيل</string>
    <string name="enable_always_ask_title">اسال دائما</string>
    <string name="enable_always_ask_description">اسأل قبل كل مكالمة مسجلة</string>
    <string name="category_filter_recorder">فلترالتسجيل</string>
    <string name="mode_recorder_title">مود التسجيل</string>
    <string name="mode_recorder_description">حدد طريقة التسجيل لكل ارقام الهواتف أو جهات الاتصال فقط</string>
    <string name="priority_contacts_title">الأولوية لهذه الجهات</string>
    <string name="priority_contacts_description">حفظ إدارة جهات الاتصال ( فقط لوضع الاتصالات ذات الأولوية)</string>
    <string name="inbox_size_title">حجم البريد الوارد</string>
    <string name="inbox_size_description">أقصى حجم يمكن أن يحفظ في التخزين.</string>
    <string name="save_recording_note_title">حفظ التسجيل</string>
    <string name="save_recording_note_description">حفظ التسجيل بعد إضافة ملاحظات الاتصال</string>
    <string name="category_more_option_name">خيارات اخرى</string>
    <string name="shake_cancel_record_title">الغاء التسجيل برجة اوهزة الهاتف</string>
    <string name="shake_cancel_record_description">هز الجهاز لللإلغاء التلقائي لتسجيل المكالمة الحالية.</string>
    <string name="enable_private_mode_title">وضع الخاص</string>
    <string name="enable_private_mode_description">تمكين كلمة المرور عند فتح هذا التطبيق</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="beep_sound_when_record_title">صوت الصافرة</string>
    <string name="beep_sound_when_record_description">تنبيه صوت الصافرة خلال المكالمة بعد كل 30 ثانية</string>
    <string name="dialog_warning_disable_notification_message">النظام سيقوم بايقاف تسجيل المكالمات ، هل تريد ذلك؟
    </string>
    <string name="dialog_warning_over_inbox_limit_title">تحذير</string>
    <string name="dialog_warning_over_inbox_limit_message">أنت تجاوزت الحد المسموح لتسجيل المكالمات ، يمكنك زيادته بحذف
        بعض التسجيلات القديمة الغير مهمة
    </string>
    <string name="note">ملاحظة</string>
    <string name="notification_stop_recording">المس لتعطيل خدمة المسجل</string>
    <string name="warning_unable_record">تعذر تسجيل المكالمة</string>
    <string name="record_impossible">هناك تطبيق آخر يقوم حالياً باستهلاك موارد الجهاز</string>
    <string name="string_warning_record_a_call">هل ترغب في تسجيل هذه المكالمة ؟</string>
    <string name="string_ok">حسنا</string>
    <string name="string_yes">اجل</string>
    <string name="string_no">لا</string>
    <string name="string_cancel">إلغاء</string>
    <string name="string_record">سجل</string>
    <string name="player_note_hint">لا ملاحظة</string>
    <string name="unknow_number">رقم مجهول</string>
    <string name="empty_histoty_page">ليس هناك اي تسجيل</string>
    <string name="empty_contact_history">فارغ</string>
    <string name="waiting_load_content">انتظر رجاء....</string>
    <string name="header_context_menu">اختار</string>
    <string name="days">أيام</string>
    <string name="hours">ساعات</string>
    <string name="minutes">دقائق</string>
    <string name="seconds">ثواني</string>
    <string name="selected_count">مختار</string>
    <string name="player_title">مشغل التسجيل</string>
    <string name="player_history_label">تاريخ المتصل من</string>
    <string name="player_save_success_notice">تم حفظ الملاحظة بنجاح</string>
    <string name="player_save_unsuccess_notice">لم يتم حفظ التسجيل</string>
    <string name="player_history_from_inbox">صندوق الواردات</string>
    <string name="player_history_from_favorite">المفضلة</string>
    <string name="ask_save_this_recording_dialog">نقل هذا التسجيل إلى مجلد الحفظ ؟</string>
    <string name="share_this_record_dialog_title">مشاركة ملف التسجيل</string>
    <string name="contact_history_title">تاريخ جهة الاتصال</string>
    <string name="priority_contact_title">الأولوية لهذه الجهة</string>
    <string name="dialog_detail_phone_number">رقم الهاتف :</string>
    <string name="dialog_detail_file_type">نوع الملف:</string>
    <string name="dialog_detail_file_size">الحجم:</string>
    <string name="dialog_detail_file_duration">المدة:</string>
    <string name="dialog_detail_file_path">المسار:</string>
    <string name="file_is_not_exist">لم تتم إزالة هذا الملف من التخزين</string>
    <string name="dialog_request_overlay_permision_message">تحتاج إلى منح حق الوصول إلى</string>
    <string name="no_permission">الأذونات المطلوبة نفيت</string>
    <string name="permission_record_audio">تسجيل صوتي</string>
    <string name="permission_read_contacts">قراءة جهات الاتصال</string>
    <string name="permission_detect_new_call">كشف مكالمة جديدة</string>
    <string name="permission_read_call_status">قراءة حالة المكالمة</string>
    <string name="permission_save_record_file">حفظ ملف التسجيل</string>
    <string name="warning_device_no_support_voice_call">قام نظام الهاتف بإيقاف التطبيق</string>
    <string name="warning_title">تحذير</string>
    <string name="checkbox_dont_show_again">لا تظهر مرة أخرى</string>
    <string name="dialog_inform_limit_inbox_title">معلومات مهمة</string>
    <string name="dialog_inform_limit_inbox_content">علبة الواردات تبقى على المكالمات 100 آخر (كالقيمة الافتراضية).
        يمكنك تعيين حجم مختلف في الإعدادات.
        يحذف مسجل المكالمات التي لا تريد حفظ تلقائياً .
        في حالة امتلاء علبة الواردات وتم تسجيل مكالمة جديدة يتم تلقائياً حذف المكالمة ألاقدم .
        ضع في اعتبارك لحفظ جميع المكالمات الهامة
    </string>
    <string name="category_about_name">معلومات</string>
    <string name="about_app_version_title">إصدار التطبيق</string>
    <string name="about_app_license_title">رخصة</string>
    <string name="about_app_get_all_app_title">تطبيقات أخرى ستعجبك</string>
    <string name="about_app_get_all_app_description">SMA Studios Pvt. Ltd</string>
    <string name="category_contact_us_name">اتصل بنا</string>
    <string name="feedback">ارتسامات</string>
    <string name="about_app_feedback_title">Feedback &amp; Error reporting</string>
    <string name="about_app_smobile_on_googleplus_title">SMA Studios Pvt. Ltd on google plus</string>
    <string name="library_license">
        <b>1.Library:</b>
        \n- MPAndroidChart \n- json_simple-1.1.jar \n- Android-Universal-Image-Loader
    </string>
    <string name="resource_license">
        <b>3.Resources:</b>
    </string>
    <string name="backlink_license">1. icons8.com \n2. 365psd.com \n3. iconsolid.com</string>
    <string name="apache_license">http://www.apache.org/licenses/LICENSE-2.0.txt</string>
    <string name="app_feedback_exception_no_app_handle">لايوجد لديك بريد الكتروني على الهاتف</string>
    <string name="sync_all_button">مزامنة الكل</string>
    <string name="category_cloud_name">الحساب</string>
    <string name="category_backup_option_name">خيارات الاستعادة</string>
    <string name="cloud_sync_wifi_only_title">واي فاي فقط</string>
    <string name="cloud_sync_wifi_only_description">استخدم الواي فاي عند الحفظ بشكل اوتوماتيكي</string>
    <string name="cloud_sync_automatic_title">حفظ آلي</string>
    <string name="cloud_sync_automatic_description">قم بحفظ المكالمة عند تلقي اتصال جديد</string>
    <string name="no_internet">ليس هناك اتصال بالانترنت</string>
    <string name="unlink_dropbox">لم تسجل الدخول الي dropbox بعد</string>
    <string name="warning_dialog_using_mobile_data_title">تحذير</string>
    <string name="warning_dialog_using_mobile_data_des">انت تستعمل بيانات الهاتف هل تريد الاستمرار؟</string>
    <string name="sync_notification_ticker_text">مزامنة</string>
    <string name="sync_notification_content_text">مزامنة dropbox</string>
    <string name="sync_notification_content_title">"انتظر رجاء"</string>
    <string name="storage_title">تخزين</string>
    <string name="storage_btn_clear_data">مسح البيانات</string>
    <string name="storage_graphic_data_title">مخزن البيانات</string>
    <string name="storage_graphic_free_space">متاح</string>
    <string name="storage_graphic_used_record">بيانات التسجيل</string>
    <string name="storage_graphic_number_record">التسجيلات</string>
    <string name="storage_graphic_other_data">بيانات أخرى</string>
    <string name="storage_graphic_name_folder">اسم الملف</string>
    <string name="dialog_change_name_folder_save_file">مجلد حفظ السجلات</string>
    <string name="dialog_change_name_folder_save_file_description">الاسم:</string>
    <string name="dialog_clear_all_data_title">امسح البيانات</string>
    <string name="dialog_clear_all_data_description">هل أنت متأكد من حذف كل تسجيل في مجلد علبة الواردات ؟</string>
    <string name="string_search_hint">اسم جهة الاتصال رقم الهاتف ، مذكرة</string>
    <string name="login_screen_title">ادخل كلمة المرور</string>
    <string name="passcodelock_numpad_0">0</string>
    <string name="passcodelock_numpad_1">1</string>
    <string name="passcodelock_numpad_2">2</string>
    <string name="passcodelock_numpad_3">3</string>
    <string name="passcodelock_numpad_4">4</string>
    <string name="passcodelock_numpad_5">5</string>
    <string name="passcodelock_numpad_6">6</string>
    <string name="passcodelock_numpad_7">7</string>
    <string name="passcodelock_numpad_8">8</string>
    <string name="passcodelock_numpad_9">9</string>
    <string name="passcode_title">Passcode</string>
    <string name="passcode_reset_password">اعادة كلمة المرور</string>
    <string name="wrong_lenght_password">كلمة المرور يجب ان تحتوي علي 4 ارقام</string>
    <string name="wrong_match_password">كلمة المرور غير مشابهة</string>
    <string name="password_is_empty">كلمة المرور لا يجب ان تترك فارغة</string>
    <string name="old_password_is_incorrect">كلمة المرور القديمة غير صحيحة</string>
    <string name="dialog_reset_password_new_pass">كلمة المرور الجديدة</string>
    <string name="dialog_reset_password_old_pass">كلمة المرور القديمة</string>
    <string name="dialog_setup_password_txt_confirm_pass">تأكيد كلمة المرور</string>
    <string name="dialog_setup_password_txt_pass">كلمةالمرور</string>
    <string name="dialog_setup_password_txt_title">إعداد كلمة المرور</string>
    <string name="rate_dialog_txt_title">تقييم</string>
    <string name="rate_dialog_txt_inform">هل اعجبك التطبيق</string>
    <string name="rate_dialog_btn_rate_now">قيم الان</string>
    <string name="rate_dialog_btn_rate_remind_late">ذكرني لاحقا</string>
    <string name="rate_dialog_btn_no_thank">لا شكرا</string>
    <string name="app_name">مسجل المكالمات 2019</string>
    <string name="admob_app_id">ca-app-pub-8944279269152834~5572972376</string>
</resources>